--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -73,7 +72,7 @@
 
 <section class="daily-feature">
     <img src="daily.jpg" alt="Photo of the day">
-    <p class="caption">January 18, 2026 — Afternoon light over the meadow.</p>
+    <p class="caption">January 2026 — Peace </p>
 </section>
 
 <section class="album-section">
@@ -107,4 +106,3 @@
 
 
 
-</html>
