Update caption text in daily feature section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <section class="daily-feature">
     <img src="daily.jpg" alt="Photo of the day">
-    <p class="caption">January 2026 — Peace </p>
+    <p class="caption">January 2026 — Focus </p>
 </section>
 
 <section class="album-section">
