--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 
 <section class="daily-feature">
     <img src="daily.jpg" alt="Photo of the day">
-    <p class="caption">January 2026 — Focus </p>
+    <p class="caption">January 2026 — Peace </p>
 </section>
 
 <section class="album-section">
     <h3>The Archive</h3>
-    <div class="grid">
+<!--    <div class="grid">
         
         <div class="photo-card">
             <img src="photo1.jpg" alt="Archive photo">
@@ -94,7 +94,20 @@
             <p class="date-label">Jan 15, 2026</p>
         </div>
 
+</div> -->
+
+    <div class="grid">
+        <div class="photo-card">
+            <img src="archive1.jpg" alt="Yesterday">
+            <p class="date-label">Yesterday</p>
+        </div>
+
+        <div class="photo-card">
+            <img src="archive2.jpg" alt="Two days ago">
+            <p class="date-label">Previous</p>
+        </div>
     </div>
+
 </section>
 
 <footer>
