--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
 
      <div class="grid">
         <div class="photo-card">
-            <img src="archive1.jpg" alt="Yesterday">
+            <img src="photo1.jpg" alt="Yesterday">
             <p class="date-label">Yesterday</p>
         </div>
 
         <div class="photo-card">
-            <img src="archive2.jpg" alt="Two days ago">
+            <img src="photo2.jpg" alt="Two days ago">
             <p class="date-label">Previous</p>
         </div>
     </div> 
