--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <section class="album-section">
     <h3>The Archive</h3>
 
-     <div class="grid">
+    <!-- <div class="grid">
         <div class="photo-card">
             <img src="photo1.jpg" alt="Yesterday">
             <p class="date-label">Yesterday</p>
@@ -88,28 +88,28 @@
             <img src="photo2.jpg" alt="Two days ago">
             <p class="date-label">Previous</p>
         </div>
-    </div> 
+    </div> -->
 
 
 
-    <!-- <div class="grid">
+     <div class="grid">
         
         <div class="photo-card">
             <img src="photo1.jpg" alt="Archive photo">
-            <p class="date-label">Jan 17, 2026</p>
+            <p class="date-label">Yesterday</p>
         </div>
 
         <div class="photo-card">
             <img src="photo2.jpg" alt="Archive photo">
-            <p class="date-label">Jan 16, 2026</p>
+            <p class="date-label">Previous</p>
         </div>
 
         <div class="photo-card">
             <img src="photo3.jpg" alt="Archive photo">
-            <p class="date-label">Jan 15, 2026</p>
+            <p class="date-label">Previous</p>
         </div>
 
-    </div> -->
+    </div> 
 
 </section>
 
