--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </header>
 
 <section class="daily-feature">
-    <img src="daily.jpg" alt="Latest Photo">
+    <img src="daily.jpg?v=1" alt="Latest Photo">
     <p style="margin-top:1rem; font-style:italic;">Today's Moment</p>
 </section>
 
