--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </header>
 
 <section class="daily-feature">
-    <img src="daily.jpg?v=1" alt="Latest Photo">
-    <p style="margin-top:1rem; font-style:italic;">Today's Moment</p>
+    <img src="daily.jpg" alt="Latest Photo">
+    <p class="caption">Last updated: <span id="update-time">Awaiting first upload...</span></p>
 </section>
 
 <section class="album-section">
