--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </header>
 
 <section class="daily-feature">
-    <img src="daily.jpg" alt="Latest Photo">
+    <img src="daily.jpg?v=1" alt="Latest Photo">
     <p class="caption">Last updated: <span id="update-time">Awaiting first upload...</span></p>
 </section>
 
