Update title and header text in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ML Meadows | Daily Moments</title>
+    <title>Meadows | Daily Moments</title>
     <style>
         :root { --bg: #fdfcfb; --text: #333; }
         body { font-family: 'Helvetica Neue', sans-serif; margin: 0; background: var(--bg); color: var(--text); }
@@ -21,12 +21,13 @@
 <body>
 
 <header>
-    <h1>ML MEADOWS</h1>
+    <h1>MEADOWS</h1>
     <p>A daily glimpse through the lens.</p>
 </header>
 
 <section class="daily-feature">
-    <img src="daily.jpg?v=1" alt="Latest Photo">
+    <img src="daily.jpg?v=1" 
+alt="Latest Photo">
     <p class="caption">Last updated: <span id="update-time">Awaiting first upload...</span></p>
 </section>
 
