--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <section class="daily-feature">
     <img src="daily.jpg?v=1769078849" 
 alt="Latest Photo">
-    <p class="caption">Last updated: <span id="update-time">Awaiting first upload...</span></p>
+    <p class="caption">Last updated: <span id="update-time">Today...</span></p>
 </section>
 
 <section class="album-section">
